WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50143
[GTK] Tooltips not shown when scrolling
https://bugs.webkit.org/show_bug.cgi?id=50143
Summary
[GTK] Tooltips not shown when scrolling
Carlos Garcia Campos
Reported
2010-11-29 03:24:36 PST
Tooltips are sometimes not shown because coordiantes are not converted from contents to window.
Attachments
Patch that fixes the problem
(1.50 KB, patch)
2010-11-29 03:27 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2010-11-29 03:27:35 PST
Created
attachment 75007
[details]
Patch that fixes the problem
WebKit Commit Bot
Comment 2
2010-11-29 03:50:46 PST
Comment on
attachment 75007
[details]
Patch that fixes the problem Clearing flags on attachment: 75007 Committed
r72787
: <
http://trac.webkit.org/changeset/72787
>
WebKit Commit Bot
Comment 3
2010-11-29 03:50:51 PST
All reviewed patches have been landed. Closing bug.
Alexander Pavlov (apavlov)
Comment 4
2010-11-29 06:52:46 PST
http://trac.webkit.org/changeset/72787
seems to crash fast/events/mouseover-mouseout2.html on both GTK Linux 32-bit Release and GTK Linux 64-bit Debug bots. Apologies if I'm wrong (this is really a weird combination).
Philippe Normand
Comment 5
2010-11-30 01:57:04 PST
Yep, seems like this patch breaks the test indeed. See also
http://webkit-bots.igalia.com/amd64/svn_72787.core-when_1291031897-_-who_DumpRenderTree-_-why_11.trace.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug