2010-11-29  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Tooltips not shown when scrolling
        https://bugs.webkit.org/show_bug.cgi?id=50143

        Convert tooltip area to window coordinates so that tooltips are
        shown even after scrolling.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::mouseDidMoveOverElement):

Canonical link: https://commits.webkit.org/63246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72787 268f45cc-cd09-0410-ab3c-d52691b4dbfc