WebKit/gtk/WebCoreSupport/ChromeClientGtk.cpp
@@ -31,6 +31,7 @@
 #include "FileChooser.h"
 #include "FloatRect.h"
 #include "FrameLoadRequest.h"
+#include "FrameView.h"
 #include "GtkVersioning.h"
 #include "HTMLNames.h"
 #include "IntRect.h"
@@ -523,7 +524,8 @@ void ChromeClient::mouseDidMoveOverElement(const HitTestResult& hit, unsigned mo
     }
 
     Node* node = hit.innerNonSharedNode();
-    m_webView->priv->tooltipArea = node ? node->getRect() : IntRect();
+
+    m_webView->priv->tooltipArea = node ? node->document()->frame()->view()->contentsToWindow(node->getRect()) : IntRect();
 }
 
 void ChromeClient::setToolTip(const String& toolTip, TextDirection)
